--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: Kakusi's Space
+subtitle: Study notes for machine learning, deep learning, statistics and data visualization. To tracing my learning steps
 use-site-title: true
 ---
 
